test/good/arrays/in03.px

print 10^^5 in [1.0..10^6]
print 10^5 in [1.5..10^6]
