test/bad/arrays/comprehension08.px

[for i in 0...10 yield i]
print i
